apps/hello-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
  creationTimestamp: "2026-05-08T07:25:25Z"
  generation: 16
  labels:
    app: hello-k8s
  name: hello-k8s
  namespace: default
  resourceVersion: "73911"
  uid: 4928074d-431c-46e4-8e87-7aad30e742de
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello-k8s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
      - env:
        - name: APP_MESSAGE
          valueFrom:
            configMapKeyRef:
              key: APP_MESSAGE
              name: hello-config
        - name: API_KEY
          valueFrom:
            secretKeyRef:
              key: API_KEY
              name: hello-secret
        image: nginx:1.27
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nginx
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: hello-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: hello-storage
        persistentVolumeClaim:
          claimName: hello-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-10T10:45:12Z"
    lastUpdateTime: "2026-05-10T10:45:12Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-08T07:25:25Z"
    lastUpdateTime: "2026-05-11T00:29:34Z"
    message: ReplicaSet "hello-k8s-7b646bcfdf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 16
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
